--- a/TaskDesk_version2/Views/AddUserWindow.axaml
+++ b/TaskDesk_version2/Views/AddUserWindow.axaml
@@ -4,6 +4,8 @@
         x:Class="TaskDesk_version2.Views.AddUserWindow"
         x:DataType="vm:AddUserWindowViewModel"
         Title="Add User"
+        CanResize="False"
+        CanMaximize="False"
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner">
         
